website v 2.0 optimized for SEO, updated about and ordering of pages

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Collin Wilkins - Portfolio</title>
+    <title>Collin Wilkins | AI Automation & Python Consulting</title>
+    <meta name="description" content="AI automation consultant specializing in Python scripting, LLM prompt engineering, AWS Lambda, and API integration. View my portfolio and case studies.">
+    <meta name="keywords" content="AI consulting, Python automation, LLM prompt engineering, AWS Lambda, API integration, web scraping">
   </head>
   <body>
     <div id="root"></div>
